                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2021-02-11
 * Fixed wingman tube job viewer.

2021-01-30
 * Fixed a couple of warnings in lib/Wing/Firebase.pm

2021-01-28
 * Added default_time to luxon-date-time.

2021-01-05
 * Added bin/util/nginx_ip_count.pl for seeing which IP's are hitting the server the most given a specific tail from the nginx log.

  USAGE:   tail -10000 /var/log/nginx/access.log|bin/util/nginx_ip_count.pl


2020-12-12
 * Updated default captcha field to be more clear for dullards.
 * Removed captchas that were too challenging for mere mortals.

2020-12-05
 * Added wing.luxon2wing() date converter in wing.vue.js.

2020-12-04
 * Fix timezone formatting bug in wing.vue.js format_datetime().

2020-11-30
 * Added an EmailAllUsers wingman job.

2020-11-23
 * Added wing.format_datetime() to wing.vue.js.

2020-11-21
 * luxon-date-time component in wing.vue.js now accepts date-disabled-fn property to disable specific dates.
 * wing.format_date() in wing.vue.js now correctly places a comma after the day.

2020-11-20
 * Wing::Rest::generate_relationship() now has a new option in named_options called ranged. This allows you to specify _start_name_of_field and _end_name_of_field in your query params, which will search >= name_of_field and <= name_of_field on that relationship.

2020-11-19
 * Expose ip_address field to describe() method which can be useful to lock some requests to specific IP addresses.

2020-11-18
 * Older browsers don't support the ||= operator, so removing it from wing.vue.js.
 * Enabled decade buttons on the luxon date time picker.

2020-11-17
 * Added format_date(), format_timeago(), date2luxon() in wing.vue.js.
 * Depricated the datetime and timeago filters in wing.vue.js.